[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/DialogArea.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="DialogArea" type="Area2D"]
script = ExtResource( 1 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_DialogArea_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DialogArea_mouse_exited"]
